# avchat

./: .gitignore  Makefile.am  README.md  avchat.cfg  avchat.cfg.sample  avchat.sql  chatclient.sln  chatserver.sln  configure.ac
chatclient/: ChatClient - 副本.h  ChatClient.cpp  ChatClient.h  ChatClientUtils.cpp  ChatClientUtils.h  ChatError.cpp  ChatError.h  ChatRequest.cpp  ChatRequest.h  CommandCenter.cpp  CommandCenter.h  ErrorManager.cpp  ErrorManager.h  FileManager.cpp  FileManager.h  FileRequestAckCommand.cpp  FileRequestAckCommand.h  IChatClientController.h  ImageMessageForRecv.cpp  ImageMessageForRecv.h  ImageMessageForSend.cpp  ImageMessageForSend.h  LibXmlUtils.cpp  LibXmlUtils.h  LoginAckCommand.cpp  LoginAckCommand.h  LoginError.cpp  LoginError.h  MessageError.cpp  MessageError.h  MessageRequest.cpp  MessageRequest.h  RapidXmlUtils.cpp  RapidXmlUtils.h  ReadMe.txt  RequestFilesInfo.cpp  RequestFilesInfo.h  TcpPeerManager.cpp  TcpPeerManager.h  Utils.cpp  (+13 more)
chatserver/: ChatOverlappedData.cpp  ChatOverlappedData.h  ChatServer.h  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  CommandCenter.cpp  CommandCenter.h  DBContext.cpp  DBContext.h  FileMan.cpp  FileMan.h  ReadMe.txt  ServerContext.cpp  ServerContext.h  SimpleTest.cpp  SimpleTest.h  User.cpp  User.h  Utils.cpp  Utils.h  chatserver.cpp  chatserver.sln  chatserver.vcxproj  chatserver.vcxproj.filters  main.cpp  stdafx.cpp  stdafx.h  unixserver.cpp  unixserver.h
chattest/: ChatClientController.cpp  ChatClientController.h  main.cpp
common/: ChatCommand.cpp  ChatCommand.h  ChatOverlappedData.cpp  ChatOverlappedData.h  FileExistsAckCommand.cpp  FileExistsAckCommand.h  FileExistsCommand.cpp  FileExistsCommand.h  FileRequestAckCommand.cpp  FileRequestAckCommand.h  FileRequestCommand.cpp  FileRequestCommand.h  FileUtils.cpp  FileUtils.h  FileUtilsTest.cpp  LoginCommand.cpp  LoginCommand.h  MessageCommand.cpp  MessageCommand.h  NetConstants.cpp  NetConstants.h  ReadMe.txt  SockStream.cpp  SockStream.h  StringUtils.cpp  StringUtils.h  Trace.cpp  UserListCommand.cpp  UserListCommand.h  Utils.cpp  Utils.h  WSAStarter.cpp  WSAStarter.h  buffer.h  common.vcxproj  common.vcxproj.filters  errcode.h  linux_trace.cpp  linux_trace.h  stdafx.h  (+3 more)
doc/: chatserverdesign.txt
qt-patch/: qbubbletext.cpp  qbubbletext.h  qtextdocumentlayout.cpp  qtextlayout.cpp  text.pri
qtchatclient/: BubbleTextObject.cpp  BubbleTextObject.h  ChatClientController.cpp  ChatClientController.h  CustomShadowEffect.cpp  CustomShadowEffect.h  DropShadowWidget.cpp  DropShadowWidget.h  FileRequestItem.cpp  FileRequestItem.h  FileRequestWidget.cpp  FileRequestWidget.h  GifManager.cpp  GifManager.h  ImageLoader.cpp  ImageLoader.h  ImageViewer.cpp  ImageViewer.h  ImageViewer.ui  LoginDialog.cpp  LoginDialog.h  OneToOneRoom.cpp  OneToOneRoom.h  OneToOneRoom.ui  PictureLabel.cpp  PictureLabel.h  QtClientUtils.cpp  QtClientUtils.h  ResizeableStackedWidget.cpp  ResizeableStackedWidget.h  TextViewer.cpp  TextViewer.h  TitleBar.cpp  TitleBar.h  Utils.cpp  Utils.h  debugout.h  filetransfer.ui  filetransitem.ui  fixed.natvis  (+15 more)
qtchatclient/GeneratedFiles/: qrc_qtchatclient.cpp  ui_OneToOneRoom.h  ui_logindialog.h  ui_qtchatclient.h
qtchatclient/Resources/: Thumbs.db  scrollbar.qss  toolbutton.qss
qtchatclient/Resources/filetypes/: keke.txt
qtchatclient/design/: close.psd  close2.psd
qtchatclient/res/: Thumbs.db
qtchatserver/: main.cpp  qtchatserver.cpp  qtchatserver.h  qtchatserver.qrc  qtchatserver.ui  qtchatserver.vcxproj  qtchatserver.vcxproj.filters
